tests/invalid/syntax/interface_method_no_func.nyx
// INVALID: interface method declarations must have func keyword
// Expected parse error: func required for interface method
interface Bad
    do_thing(*self) -> ok
